# Mathematics

./: CMakeLists.txt
fumathematics/: CMakeLists.txt  mathematics.hpp  numerics.hpp
fumathematics/types/: CMakeLists.txt  float2.hpp  float3.inl  float4.hpp  float4.inl
include/: mathematics.hpp  mathematics.inl  numerics.hpp
include/types/: float3.hpp  mat3.hpp  mat4.inl
mathematics/: CMakeLists.txt  mathstream.hpp  numerics.hpp
mathematics/types/: float2.inl  mat3.inl  mat4.hpp  vect.hpp
src/: main.cpp
test/: CMakeLists.txt  main.cpp
